<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bg_task_page"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.TaskDetailsActivity"
    tools:showIn="@layout/activity_before_task">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"

        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.BeforeTaskActivity"
        tools:showIn="@layout/activity_before_task">



        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/current_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:focusable="false"
                    android:hint="Date" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/current_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"

                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:focusable="false"
                    android:hint="Time" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="30dp">

                <TextView
                    android:id="@+id/top"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="0dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_vertical|center"
                    android:paddingTop="5dp"
                    android:text="@string/before_picture"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />

            </android.support.v7.widget.CardView>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"

                android:layout_weight="0.15">
                <!-- <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/test"/> -->


                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                </android.support.v4.view.ViewPager>

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager_1"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content">

                </android.support.v4.view.ViewPager>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/image_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Please Select or Capture Image" />

                <ImageView
                    android:id="@+id/camera_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/image_count"
                    android:src="@drawable/ic_add_a_photo_black_36dp" />


            </RelativeLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/before_work_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/Remark"
                    android:inputType="textMultiLine" />


            </android.support.design.widget.TextInputLayout>


        </LinearLayout>
        <Button
            android:id="@+id/before_work_save_btn"
            android:layout_below="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@drawable/ripple_15"
            android:text="@string/Save"
            android:layout_alignParentBottom="true"
            android:textColor="#FFFFFF" />



    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>