<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fms_login_bg_1"
    android:paddingBottom="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.LandingActivity"
    tools:showIn="@layout/activity_landing">


    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/black_overlay"
        android:layout_height="match_parent">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="date"
            android:textColor="#FFFFFF" />


        <android.support.v7.widget.CardView
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/user_profile_photo"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp">


                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="#fff" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_below="@+id/usernameText"
                    android:layout_centerHorizontal="true"
                    android:background="#B6B6B6" />


                <TextView
                    android:id="@+id/user_designation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/usernameText"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="Mobile and Web Developer at Frontline Information Technology"
                    android:textColor="#fff"
                    android:textSize="15dp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>


        <ImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/date"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="21dp"
            android:elevation="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fms_user_4" />


        <LinearLayout
            android:id="@+id/linear_layout_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:orientation="horizontal"

            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:layout_below="@+id/profile_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <RelativeLayout
                android:id="@+id/badge_layout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/relative_layout"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/assigned_task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"

                        android:layout_alignParentTop="true"
                        android:layout_marginTop="35dp"
                        android:background="@drawable/ripple"
                        android:drawableLeft="@drawable/ic_new_job_96"
                        android:drawableStart="@drawable/ic_new_job_96"
                        android:padding="2dp"
                        android:text="@string/assigned_task"
                        android:textColor="#FFFFFF" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_custom_info_bubble"
                    android:paddingTop="10dp"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/badge_layout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/badge_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <RelativeLayout
                    android:id="@+id/relative_layout_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/task_status_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginTop="35dp"
                        android:background="@drawable/ripple_15"
                        android:drawableLeft="@drawable/ic_new_job_96"
                        android:drawableStart="@drawable/ic_renew_subscription_96"
                        android:padding="2dp"
                        android:text="@string/task_status_update"
                        android:textColor="#FFFFFF" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/notification1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"

                    android:background="@drawable/ic_custom_info_bubble"
                    android:paddingTop="10dp"
                    android:text="0"

                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </RelativeLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/badge_layout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:layout_below="@id/linear_layout_2"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/badge_layout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_layout_3"
                android:layout_width="match_parent"

                android:layout_weight="0.7"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/create_random_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/ripple_teal"
                    android:drawableLeft="@drawable/ic_renew_subscription_96"
                    android:drawableStart="@drawable/ic_renew_subscription_96"
                    android:padding="2dp"
                    android:text="@string/create_random_task"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/badge_layout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.9">

            </RelativeLayout>

        </LinearLayout>


        <!-- <ProgressBar
            android:id="@+id/login_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/landingForm"
            android:layout_width="match_parent"

            android:layout_height="match_parent"

            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/usernameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_name"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="date"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="16dp"
                    android:src="@drawable/user_male_100" />


            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="30dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/notificationpanel"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_weight="-2"

                            android:src="@android:drawable/ic_popup_reminder" />

                        <TextView
                            android:layout_weight="1"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="Notifications"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/dot"
                            android:layout_height="wrap_content"
                            android:paddingLeft="50dp"
                            android:paddingRight="50dp"
                            android:singleLine="false"
                            android:text="•"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/notification"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"

                            android:paddingRight="10dp"
                            android:textColor="#FFFFFF" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/dot1"
                            android:layout_height="wrap_content"
                            android:paddingLeft="50dp"
                            android:paddingRight="50dp"
                            android:singleLine="false"
                            android:text="•"
                            android:textColor="#FFFFFF" />

                        <TextView
                            android:id="@+id/notification1"
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:paddingLeft="10dp"

                            android:paddingRight="10dp"
                            android:textColor="#FFFFFF" />

                    </TableRow>

                </TableLayout>


            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/assigned_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/ripple_15"
                    android:text="@string/assigned_task"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/task_status_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ripple_15"
                    android:text="@string/task_status_update"
                    android:textColor="#FFFFFF" />


            </LinearLayout>

        </LinearLayout>-->
    </RelativeLayout>


</FrameLayout>
